--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,9 +11,9 @@ permalink: /about/
           <img src="{{site.baseurl}}/assets/img/{% if site.author-pic %}{{site.author-pic}}{% endif %}" alt="Author image">
         </div>
         <div class="author_info">
-          <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Error{% endif %}</h2>
-          <p class="author_subtitle">{% if site.about-author %}{{site.about-author}}{% else %}An error occurred, please try reloading the page or contact me about the issue.{% endif %}</p>
-          <p class="author_subtitle">Nyah is currently working at Rakuten Kobo for her Fall 2019 co-op. She enjoys working on new projects and learning new languages, frameworks, and ways to program.</p>
+          <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Dwayne Newman{% endif %}</h2>
+          <p class="author_subtitle">{% if site.about-author %}{{site.about-author}}{% else %}La croix godard blue bottle, vape iceland fingerstache cronut single-origin coffee lyft snackwave normcore small batch.{% endif %}</p>
+          <p class="author_subtitle">Brunch sustainable tote bag offal pitchfork, jean shorts readymade lomo poutine freegan sriracha palo santo fam hammock.</p>
         </div>
       </div>
 
