--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,6 +3,7 @@ layout: default
 title: About
 permalink: /about/
 ---
+{% include header.html %}
 <section class="about">
   <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
   <div class="about_box">
@@ -11,9 +12,9 @@ permalink: /about/
           <img src="{{site.baseurl}}/assets/img/{% if site.author-pic %}{{site.author-pic}}{% endif %}" alt="Author image">
         </div>
         <div class="author_info">
-          <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Dwayne Newman{% endif %}</h2>
-          <p class="author_subtitle">{% if site.about-author %}{{site.about-author}}{% else %}La croix godard blue bottle, vape iceland fingerstache cronut single-origin coffee lyft snackwave normcore small batch.{% endif %}</p>
-          <p class="author_subtitle">Brunch sustainable tote bag offal pitchfork, jean shorts readymade lomo poutine freegan sriracha palo santo fam hammock.</p>
+          <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Error{% endif %}</h2>
+          <p class="author_subtitle">{% if site.about-author %}{{site.about-author}}{% else %}An error occurred, please use the contact page to let me know about the issue{% endif %}</p>
+          <p class="author_subtitle">Nyah is currently working at Rakuten Kobo for her Fall 2019 co-op. She enjoys working on new projects and learning new languages, frameworks, and ways to program.</p>
         </div>
       </div>
 
