--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,7 +7,7 @@ permalink: /contact/
   <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
   
   <div class="container_contact">
-  <h3 class="form_title">Send me message</h3>
+  <h3 class="form_title">Send me a message!</h3>
 
   <form action="https://formspree.io/{{site.email}}" method="post" class="form">
     <div class="message js-form-message"></div>
@@ -18,10 +18,10 @@ permalink: /contact/
         <input type="email" placeholder="Your e-mail" name="_replyto" class="form-input" required>
     </div>
     <div class="form_group">
-        <input type="tel" placeholder="Your phone" name="form_tel" class="form-input">
+        <input type="tel" placeholder="Your phone (optional)" name="form_tel" class="form-input">
     </div>
     <div class="form_group">
-        <textarea name="Message" placeholder="Message" cols="25" rows="6" class="form-textarea" required></textarea>
+        <textarea name="Message" placeholder="Whether you're contacting me about an opportunity, about the website, or as a student in a class I TA for, leave your message here." cols="25" rows="6" class="form-textarea" required></textarea>
     </div>
     <div class="form_group">
         <input type="submit" class="form_btn" value="Send">
