--- a/_pages/resume.html
+++ b/_pages/resume.html
@@ -43,7 +43,7 @@ permalink: /resume/
 		
 		<h5 class="resume_title">Software QA Developer (Co-op) at <a href="https://www.kobo.com/">Rakuten Kobo</a> <span class="date">Toronto, Ontario 09/2019 - Present</span></h5>
 		<ul class="details">
-			<li>Co-op job at Rakuten Kobo working on their website</li>
+			<li>Coming soon!</li>
 		</ul>
 		
 		<h5 class="resume_title">Undergraduate Teaching Assistant at <a href="https://www.utsc.utoronto.ca/home/">University of Toronto Scarborough</a> <span class="date">Toronto, Ontario 04/2019 - 08/2019</span></h5>
