added resume description

--- a/_pages/resume.html
+++ b/_pages/resume.html
@@ -2,6 +2,7 @@
 layout: default
 title: Resume
 permalink: /resume/
+description: Nyah's resume page including experience, projects, and coursework.
 ---
 <body>
 <section class="resume">
