Improved event layout

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -3,11 +3,11 @@ layout: default
 title: Conferences/Events
 permalink: /events/
 ---
-<section class="about">
+<section class="events">
   <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
-  <div class="about_box">
-    <div class="author">
-        <div class="author_info">
+  <div class="event_box">
+    <div class="event">
+        <div class="info">
 		
 		This is a list of conferences and events I have had the privledge of attending, and also of awards I have recieved.
 	
