Added events to event page

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -14,7 +14,9 @@ permalink: /events/
 		<div class="year">
 			<h2 class="author_title">2019</h2>
 			<h5 class="author_subtitle">
+				University of Toronto Renewable Scholarship<br>
 				<a href="https://elevate.ca/">Elevate</a><br>
+				<a href="http://www.aisquaredforum.ca/">AI Squared Forum</a><br>
 				<a href="https://collisionconf.com/">Collision Conference</a><br>
 				<a href="https://www.facebook.com/hackthevalley/">Hack the Valley 3</a><br>
 			</h5>
