Added link to course descriptions page

--- a/_pages/resume.html
+++ b/_pages/resume.html
@@ -84,7 +84,7 @@ description: Nyah's resume page including experience, projects, and coursework.
 	<div class="box">
 		<div class="inner-box">
 			<h3 class="section_header">COURSEWORK</h3>
-			Coming soon!
+			<a class="details" href="{{site.baseurl}}/list-of-classes-and-descriptions/">See my courses on this page</a>
 		</div>
 	</div>
 </section>
