--- a/_pages/resume.html
+++ b/_pages/resume.html
@@ -42,7 +42,7 @@ description: Nyah's resume page including experience, projects, and coursework.
 	<div class="inner-box">
 		<h3 class="section_header">EXPERIENCE</h3>
 		
-		<h5 class="resume_title">Software Full Stack and QA Developer (Co-op) at <a href="https://www.kobo.com/">Rakuten Kobo</a> <span class="date">Toronto, Ontario 09/2019 - Present</span></h5>
+		<h5 class="resume_title">Software Full Stack and QA Developer (Co-op) at <a href="https://www.kobo.com/">Rakuten Kobo</a> <span class="date">Toronto, Ontario 09/2019 - 12/2019</span></h5>
 		<ul class="details">
 			<li>Assisted in analyzing requirements to design, develop and implement a payment processor switch saving over a hundred thousand dollars annually.</li>
 			<li>Designed, implemented and monitored web pages using and new features for continuous improvement on corporate e-commerce website.</li>
