--- a/_pages/about.html
+++ b/_pages/about.html
@@ -13,7 +13,7 @@ permalink: /about/
         <div class="author_info">
           <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Error{% endif %}</h2>
           <p class="author_subtitle">{% if site.about-author %}{{site.about-author}}{% else %}An error occurred, please use the contact page to let me know about the issue{% endif %}</p>
-          <p class="author_subtitle">Nyah is currently working at Rakuten Kobo for her Fall 2019 co-op. She enjoys working on new projects and learning new languages, frameworks, and ways to program.</p>
+          <p class="author_subtitle">Nyah is currently at school in her 3rd year. She enjoys working on new projects and learning new languages, frameworks, and ways to program.</p>
         </div>
       </div>
 
