Update to 3rd year and add entry for 2020

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -12,6 +12,13 @@ permalink: /events/
 		This is a list of conferences and events I have had the privledge of attending, and also of awards I have recieved.
 	
 		<div class="year">
+			<h2 class="author_title">2020</h2>
+			<h5 class="author_subtitle">
+				Finalist in IBM's Student Design competition<br>
+			</h5>
+		</div>
+
+		<div class="year">
 			<h2 class="author_title">2019</h2>
 			<h5 class="author_subtitle">
 				University of Toronto Renewable Scholarship<br>
