--- a/_pages/resume.html
+++ b/_pages/resume.html
@@ -30,7 +30,7 @@ description: Nyah's resume page including experience, projects, and coursework.
 		<h3 class="section_header">EDUCATION</h3>
 		<h5 class="resume_title">University of Toronto <span class="date">Toronto, Ontario 2018 - 2022</span></h5>
 		<ul class="details">
-			<li>Computer Science Specialist Co-op Program, 2nd year</li>
+			<li>Computer Science Specialist Co-op Program, 3rd year</li>
 			<li>University of Toronto Scholar</li>
 			<li>CGPA: 3.95 (out of 4)</li>
 		</ul>
