Add pwd, refactor input clearing

--- a/_pages/terminal.html
+++ b/_pages/terminal.html
@@ -22,6 +22,7 @@ permalink: /terminal
     <ul>
       <li>ls - views current directory files</li>
       <li>cd &lt;directory&gt; - change directories</li>
+      <li>pwd - print current directory tree</li>
       <li>cat &lt;file/link&gt; - view a file or link</li>
     </ul>
     Click anywhere to exit.
