Add clear functionality

--- a/_pages/terminal.html
+++ b/_pages/terminal.html
@@ -24,6 +24,7 @@ permalink: /terminal
       <li>cd &lt;directory&gt; - change directories</li>
       <li>pwd - print current directory tree</li>
       <li>cat &lt;file/link&gt; - view a file or link</li>
+      <li>clear - clear the terminal</li>
     </ul>
     Click anywhere to exit.
   </div>
